replaced listof to account for null case